# ngsderive

./: .editorconfig  .gitignore  .pydocstylerc  .pylintrc  404.html  CHANGELOG.md  Dockerfile  LICENSE.md  README.md  index.html  index.md.bak  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/workflows/: cd.yml  ci.yml  release.yml  stale.yml
docs/subcommands/: encoding.md  endedness.md  instrument.md  junction_annotation.md  junction_saturation.md  readlen.md  strandedness.md
ngsderive/: __main__.py  utils.py
ngsderive/commands/: encoding.py  endedness.py  instrument.py  junction_annotation.py  junction_saturation.py  machine.py  readlen.py  strandedness.py
ngsderive/readers/: bam.py
scripts/: ngsderive
search/: search_index.json
subcommands/encoding/: index.html
subcommands/endedness/: index.html
subcommands/instrument/: index.html
subcommands/junction_annotation/: index.html
subcommands/readlen/: index.html
subcommands/strandedness/: index.html
tests/: generate.py  test_instrument_subcommand.py
tests/fixtures/: flowcells.mocked.tsv  instruments.mocked.tsv
