[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "ngsderive"
version = "1.2.0"
description = "Forensic analysis tool useful in backwards computing information from next-generation sequencing data."
license = "MIT"
authors = [
    "Clay McLeod <Clay.McLeod@STJUDE.org>",
    "Andrew Frantz <andrew.frantz@STJUDE.org"
]
readme = "README.md"
repository = "https://github.com/claymcleod/ngsderive"
keywords = [
    "bioinformatics",
    "genomics",
    "sam",
    "bam",
    "fastq"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
packages = [
    { include = "ngsderive" }
]

[tool.poetry.dependencies]
python = "^3.8"
colorlog = "^4.0.2"
pysam = "^0.15.3"
pytabix = "^0.0.2"
rstr = "^2.2.6"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
twine = "^3.1.1"
mkdocs = "^1.1"
mkdocs-bootswatch = "^1.1"


[tool.poetry.scripts]
ngsderive = 'ngsderive.__main__:run'
