[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "ngsderive"
version = "1.4.0"
description = "Forensic analysis tool useful in backwards computing information from next-generation sequencing data."
license = "MIT"
authors = [
    "Clay McLeod <Clay.McLeod@STJUDE.org>",
    "Andrew Frantz <andrew.frantz@STJUDE.org"
]
readme = "README.md"
repository = "https://github.com/claymcleod/ngsderive"
keywords = [
    "bioinformatics",
    "genomics",
    "sam",
    "bam",
    "fastq"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
packages = [
    { include = "ngsderive" }
]

[tool.poetry.dependencies]
python = "^3.8"
colorlog = "^4.0.2"
pysam = "^0.15.3"
rstr = "^2.2.6"
gtfparse = "^1.2.1"
sortedcontainers = "^2.3.0"
pytabix = "^0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
twine = "^3.1.1"
mkdocs = "^1.1"
mkdocs-bootswatch = "^1.1"
python-semantic-release = "^7.11.0"
pycodestyle = "^2.6.0"
black = {version = "^20.8b1", allow-prereleases = true}
mypy = "^0.790"
pydocstyle = "^5.1.1"


[tool.poetry.scripts]
ngsderive = 'ngsderive.__main__:run'

[tool.semantic_release]
version_variable = "pyproject.toml:version"
version_source = "commit"
commit_subject = "chore: bumping version to v{version}"
commit_message = ""
commit_author = "St. Jude Cloud <support@stjude.cloud>"
build_command = "poetry build"
upload_to_release = "false"
# check_build_status = true
